--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 locale                   : "en-UK"
-title                    : "Francesca Palermo / Site Title"
+title                    : "Francesca Palermo - PhD Candidate"
 title_separator          : "-"
 name                     : &name "Francesca Palermo"
 description              : &description "personal description"
