--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Francesca Palermo"
-  avatar           : "profile_fra.jpg" #"profile.png"
+  avatar           : "profile_fra_reduced.jpg" #"profile.png"
   bio              : ""
   location         : "London, UK"
   employer         : "Queen Mary University of London"
