--- a/_config.yml
+++ b/_config.yml
@@ -84,7 +84,8 @@ author:
   avatar           : "profile_fra_reduced.jpg" #"profile.png"
   bio              : ""
   location         : "London, UK"
-  employer         : "Queen Mary University of London"
+  employer         : "Queen Mary 
+  University of London"
   pubmed           : 
   googlescholar    : "https://scholar.google.ch/citations?user=yB2o5DIAAAAJ&hl=en"
   email            : "f.palermo@qmul.ac.uk"
