--- a/_config.yml
+++ b/_config.yml
@@ -102,7 +102,7 @@ author:
   instagram        :
   impactstory      : 
   lastfm           :
-  linkedin         : "https://www.linkedin.com/in/francesca-palermo-a9107a40/"
+  linkedin         : "francesca-palermo-a9107a40"
   orcid            : 
   pinterest        :
   soundcloud       :
@@ -113,7 +113,7 @@ author:
   vine             :
   weibo            :
   xing             :
-  youtube          : "https://www.youtube.com/channel/UC03_8l-US-ecKpsMeaTcSGw"
+  youtube          : "UC03_8l-US-ecKpsMeaTcSGw"
   wikipedia        :
 
 
