--- a/_config.yml
+++ b/_config.yml
@@ -113,7 +113,7 @@ author:
   vine             :
   weibo            :
   xing             :
-  youtube          : "UC03_8l-US-ecKpsMeaTcSGw"
+  youtube          : 
   wikipedia        :
 
 
