--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -5,16 +5,16 @@ main:
     url: /cv/
 
   - title: "Publications"
-    url: /publications/
-
-  - title: "Talks"
-    url: /talks/    
+    url: /publications/  
 
   - title: "Teaching"
     url: /teaching/    
   
-  - title: "Portfolio"
-    url: /portfolio/
+  - title: "Projects"
+    url: /projects/
+	
+  #- title: "Talks"
+  #  url: /talks/  
         
   #- title: "Blog Posts"
   #  url: /year-archive/
