--- a/_config.yml
+++ b/_config.yml
@@ -187,7 +187,7 @@ collections:
   talks:
     output: true
     permalink: /:collection/:path/
-  datasets:
+  dataset:
     output: true
     permalink: /:collection/:path/
 
@@ -247,10 +247,10 @@ defaults:
       layout: talk
       author_profile: true
       share: true
-  #_datasets
+  #_dataset
   - scope:
       path: ""
-      type: datasets
+      type: dataset
     values:
       layout: single
       author_profile: true
