--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -1,18 +1,10 @@
 # Authors
 
-Name Name:
-  name        : "Name Name"
-  uri         : "http://name.com"
-  email       : "name@name.com"
-  bio         : "This is the first name."
-  avatar      : "bio-photo-2.jpg"
-  twitter     : "name"
-  google_plus : "Name"
-
-Name2 Name2:
-  name        : "Name2 Name2"
-  email       : "name2@name2.com"
-  bio         : "I ordered what?"
-  avatar      : "bio-photo.jpg"
-  twitter     : "name2"
-  google_plus : "Name"
+Francesca Palermo:
+  name        : "Francesca Palermo"
+  uri         : "https://francescapalermo.github.io/"
+  email       : "f.palermo@imperial.ac.uk"
+  # bio         : ""
+  avatar      : "images/profile_fra_reduced.jpg"
+  # twitter     : ""
+  # google_plus : ""
