--- a/_config.yml
+++ b/_config.yml
@@ -178,16 +178,16 @@ collections:
   teaching:
     output: true
     permalink: /:collection/:path/
-  publications:
-    output: true
-    permalink: /:collection/:path/
   portfolio:
     output: true
     permalink: /:collection/:path/
-  talks:
+  # talks:
+  #   output: true
+  #   permalink: /:collection/:path/
+  dataset:
     output: true
     permalink: /:collection/:path/
-  dataset:
+  publications:
     output: true
     permalink: /:collection/:path/
 
@@ -221,15 +221,6 @@ defaults:
       author_profile: true
       share: true
       comments: true
-  # _publications
-  - scope:
-      path: ""
-      type: publications
-    values:
-      layout: single
-      author_profile: true
-      share: true
-      comments: true
   # _portfolio
   - scope:
       path: ""
@@ -239,14 +230,6 @@ defaults:
       author_profile: true
       share: true
       comment: true
-  # _talks
-  - scope:
-      path: ""
-      type: talks
-    values:
-      layout: talk
-      author_profile: true
-      share: true
   #_dataset
   - scope:
       path: ""
@@ -255,6 +238,24 @@ defaults:
       layout: single
       author_profile: true
       share: true
+  # _publications
+  - scope:
+      path: ""
+      type: publications
+    values:
+      layout: single
+      author_profile: true
+      share: true
+      comments: true
+  # # _talks
+  # - scope:
+  #     path: ""
+  #     type: talks
+  #   values:
+  #     layout: talk
+  #     author_profile: true
+  #     share: true
+
 
 # Sass/SCSS
 sass:
