--- a/_config.yml
+++ b/_config.yml
@@ -83,7 +83,7 @@ author:
   name             : "Francesca Palermo"
   avatar           : "profile_fra_reduced.jpg" #"profile.png"
   bio              : ""
-  location         : "London, UK"
+  location         : "Milan, IT"
   employer         : 
   pubmed           : 
   googlescholar    : "https://scholar.google.ch/citations?user=yB2o5DIAAAAJ&hl=en"
